# Advanced-File-Explorer-Qt

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  navigationmanager.cpp  navigationmanager.h  searchworker.cpp  searchworker.h
